# wasmdb

./: .gitignore  Cargo.toml  Makefile  README.md  package-lock.json  package.json  turbo.json
crates/core/database-reactive/: Cargo.toml
crates/core/database-reactive/src/: error.rs  lib.rs  reactive_database.rs  subscription.rs
crates/core/database-reactive/tests/: projections.rs
crates/database-reactive/: Cargo.toml
crates/database-reactive/src/: dirty_notification.rs  error.rs  lib.rs  reactive_database.rs  subscription.rs
crates/database-reactive/tests/: reactive.rs
crates/example-sync/: Cargo.toml
crates/example-sync-wasm/: Cargo.toml
crates/example-sync-wasm/src/: api.rs  debug.rs  lib.rs  reactive.rs  state.rs  stream.rs
crates/example-sync/frontend/: .gitignore  package.json  tsconfig.json
crates/example-sync/frontend/src/: AddUserForm.tsx  App.tsx  BulkActions.tsx  OrdersPanel.tsx  StatsBar.tsx  UsersPanel.tsx  UsersTable.tsx  index.css  sync.ts  wasm.d.ts
crates/example-sync/src/: lib.rs
crates/rpc-command/: Cargo.toml
crates/rpc-command/rpc-command/: Cargo.toml
crates/rpc-command/rpc-command-derive/: Cargo.toml
crates/rpc-command/rpc-command-derive/src/: lib.rs
crates/rpc-command/rpc-command/src/: lib.rs
crates/rpc-command/rpc-command/tests/: append.rs  macro_integration.rs  render.rs
crates/rpc-command/tests/: render.rs
crates/sql-engine/: Cargo.toml
crates/sql-engine/examples/: wasm_no_hash.rs  wasm_parser_only.rs  wasm_size.rs
crates/sql-engine/src/: bitmap.rs  caller.rs  db_table.rs  execute.rs  lib.rs  planner.rs  reactive.rs  schema.rs  storage.rs
crates/sql-engine/src/execute/: aggregate.rs  bind.rs  context.rs  filter_batch.rs  filter_row.rs  join.rs  materialize.rs  pipeline.rs  project.rs  requirement.rs  rowset.rs  scan.rs  sort.rs
crates/sql-engine/src/planner/: invalidation.rs  materialize.rs  optimize.rs  plan.rs  reactive.rs  translate.rs
crates/sql-engine/src/reactive/: bind.rs  execute.rs  extract.rs  mod.rs  optimize.rs  plan.rs  registry.rs
crates/sql-engine/tests/: integration.rs  optimization.rs  plan_snapshot.rs  reactive.rs  uuid_serde.rs
crates/sqlbuilder/: Cargo.toml
crates/sqlbuilder/sqlbuilder/: Cargo.toml
crates/sqlbuilder/sqlbuilder-macros/src/: from_row.rs  lib.rs  parse.rs  sql.rs
crates/sqlbuilder/sqlbuilder/src/: lib.rs  run.rs  value.rs
crates/sqlbuilder/sqlbuilder/tests/: integration.rs
crates/sqlbuilder/src/: from_row.rs  lib.rs  render.rs
crates/sqlbuilder/tests/: engine_integration.rs  integration.rs
crates/sync/: Cargo.toml
crates/sync-client/: Cargo.toml
crates/sync-client/src/: client.rs  lib.rs  stream.rs
crates/sync-client/tests/: integration.rs
crates/sync-server/: Cargo.toml
crates/sync-server-mysql/: Cargo.toml
crates/sync-server-mysql/src/: apply.rs  lib.rs  server_command.rs
crates/sync-server/src/: handler.rs  state.rs
crates/sync-server/tests/: end_to_end.rs
crates/sync/src/: command.rs  protocol.rs  zset.rs
crates/sync/sync/: Cargo.toml
crates/sync/sync-client/: Cargo.toml
crates/sync/sync-client/src/: client.rs  lib.rs  repair.rs  stream.rs
crates/sync/sync-client/tests/: projection_rebase.rs
crates/sync/sync-server/: Cargo.toml
crates/sync/sync-server-mysql/: Cargo.toml
crates/sync/sync-server/src/: lib.rs
crates/sync/sync/src/: append.rs  lib.rs  protocol.rs
crates/tables-client/: Cargo.toml
crates/tables-client/src/: lib.rs
crates/tables-e2e/: Cargo.toml
crates/tables-e2e/src/: customers.rs  invoices.rs  lib.rs
crates/tables-e2e/tests/: aggregates.rs  caller_args.rs  errors.rs  in_list.rs  joins.rs  limit.rs  nullable.rs  order_by.rs  placeholders.rs  row_types.rs  select_basic.rs  smoke.rs  where_filter.rs
crates/tables-e2e/tests/common/: mod.rs
crates/tables-fieldtypes/: Cargo.toml
crates/tables-fieldtypes/src/: lib.rs
crates/tables/tables-codegen/: Cargo.toml
crates/tables/tables-codegen/src/: emit.rs  lib.rs  parse.rs
crates/tables/tables-e2e/: Cargo.toml  build.rs
crates/tables/tables-e2e/src/: contacts.rs  lib.rs  products.rs
crates/tables/tables-e2e/tests/: projection_fold.rs  projection_fold_incremental.rs  projection_log.rs  row_types.rs
examples/invoice-demo/commands/: Cargo.toml
examples/invoice-demo/commands/bindings/: AddPosition.ts  AddRecurringPosition.ts  CreateContact.ts  CreateCustomer.ts  CreateInvoice.ts  CreatePayment.ts  CreateProduct.ts  CreateRecurring.ts  CreateSepaMandate.ts  DeleteContact.ts  DeleteCustomer.ts  DeleteCustomerCascade.ts  DeleteInvoice.ts  DeletePayment.ts  DeletePosition.ts  DeleteProduct.ts  DeleteRecurring.ts  DeleteRecurringPosition.ts  DeleteSepaMandate.ts  InvoiceCommand.ts  LogActivity.ts  MarkPaid.ts  MovePosition.ts  RunRecurringOnce.ts  UpdateContact.ts  UpdateCustomer.ts  UpdateInvoiceHeader.ts  UpdatePayment.ts  UpdatePosition.ts  UpdateProduct.ts  UpdateRecurring.ts  UpdateRecurringPosition.ts  UpdateSepaMandate.ts
examples/invoice-demo/commands/src/: helpers.rs  lib.rs
examples/invoice-demo/features/: Cargo.toml  build.rs
examples/invoice-demo/features/bindings/: AddPosition.ts  CreateCreditNote.ts  CreateCustomer.ts  CreateInvoice.ts  RunRecurringOnce.ts  UpdateContact.ts  UpdateRecurring.ts
examples/invoice-demo/features/src/: command_helpers.rs  lib.rs  server_helpers.rs
examples/invoice-demo/server/: Cargo.toml
examples/invoice-demo/server/sql/: 001_init.sql  drop.sql
examples/invoice-demo/server/src/: handler.rs  lib.rs
examples/invoice-demo/server/tests/: composite_pk.rs
examples/invoice-demo/tables/: Cargo.toml
examples/invoice-demo/tables-client/: Cargo.toml
examples/invoice-demo/tables-client-generated/: Cargo.toml  build.rs
examples/invoice-demo/tables-client-generated/src/: lib.rs
examples/invoice-demo/tables-client/src/: bindings.rs  customers.rs  lib.rs
examples/invoice-demo/tables-storage/: Cargo.toml  build.rs
examples/invoice-demo/tables-storage/src/: activity_log.rs  contacts.rs  customers.rs  (+8 more)
examples/invoice-demo/wasm/: Cargo.toml  build.rs
examples/projection-demo/server/: Cargo.toml
(+924 files in other folders)
