[workspace]
members = [
    "crates/sql-parser",
    "crates/sql-engine",
    "crates/database",
    "crates/database-reactive",
    "crates/dirty-set",
    "crates/sync",
    "crates/sync-client",
    "crates/tables",
    "crates/tables-client",
    "crates/tables-codegen",
    "crates/tables-e2e",
    "crates/tables-fieldtypes",
    "crates/tables-macros",
    "crates/tables-storage",
    "crates/sync-server",
    "crates/sync-server-mysql",
    "crates/wasmdb-debug",
    "examples/sync-demo/server",
    "examples/sync-demo/commands",
    "examples/sync-demo/wasm",
    "examples/invoice-demo/server",
    "examples/invoice-demo/commands",
    "examples/invoice-demo/wasm",
    "examples/invoice-demo/tables-client-generated",
    "examples/invoice-demo/tables-storage",
]
resolver = "2"
