[package]
name = "example-sync-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
sync = { path = "../sync" }
sync-client = { path = "../sync-client" }
example-sync-commands = { path = "../example-sync-commands" }
database = { path = "../database", features = ["borsh"] }
sql-engine = { path = "../sql-engine", features = ["borsh"] }
borsh = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
