[package]
name = "rpc-command"
version = "0.1.0"
edition = "2021"

[dependencies]
rpc-command-derive = { path = "../rpc-command-derive" }

[dev-dependencies]
borsh = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = { version = "12", features = ["serde-compat"] }
