[package]
name = "sql-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
sql-parser = { path = "../sql-parser" }
borsh = { version = "1", features = ["derive"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
web-time = { version = "1", optional = true }

[features]
default = []
borsh = ["dep:borsh"]
serde = ["dep:serde"]
wasm-timing = ["dep:web-time"]
