[package]
name = "sync-client"
version = "0.1.0"
edition = "2021"

[dependencies]
sync = { path = "../sync" }
database = { path = "../database", features = ["borsh"] }
database-reactive = { path = "../database-reactive", features = ["borsh"] }
sql-engine = { path = "../sql-engine", features = ["borsh"] }
borsh = { version = "1", features = ["derive"] }
