[package]
name = "sync-server"
version = "0.1.0"
edition = "2021"

[dependencies]
sync = { path = "../sync" }
database = { path = "../database", features = ["borsh"] }
sql-engine = { path = "../sql-engine", features = ["borsh"] }
borsh = { version = "1", features = ["derive"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
sync-client = { path = "../sync-client" }
