[package]
name = "tables-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tables = { path = "../tables" }
borsh = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Request", "RequestInit", "Response", "Headers", "Window"] }
serde-wasm-bindgen = "0.6"
