[package]
name = "database-reactive"
version = "0.1.0"
edition = "2021"

[dependencies]
database = { workspace = true }
sql-engine = { workspace = true }
sql-parser = { workspace = true }
dirty-set = { workspace = true }
fnv = "1"

[features]
default = []
borsh = ["database/borsh", "sql-engine/borsh"]
serde = ["database/serde", "sql-engine/serde"]
