[package]
name = "sqlbuilder"
version = "0.1.0"
edition = "2021"

[features]
default = []
# Bind impls for `sql_engine::storage::Uuid` plus inherent runners on
# `SqlStmt` that drive the in-repo `Database`. Pure consumers of the DSL
# leave it off.
sql-engine = ["dep:sql-engine", "dep:database", "dep:sync"]

[dependencies]
sqlbuilder-macros = { workspace = true }
sql-engine = { workspace = true, optional = true }
database = { workspace = true, optional = true }
sync = { workspace = true, optional = true }
