[package]
name = "sync-client"
version = "0.1.0"
edition = "2021"

[dependencies]
sync = { workspace = true }
database = { workspace = true, features = ["borsh"] }
database-reactive = { workspace = true, features = ["borsh"] }
sql-engine = { workspace = true, features = ["borsh"] }
borsh = { version = "1", features = ["derive"] }
