[package]
name = "sync-server"
version = "0.1.0"
edition = "2021"

[dependencies]
sync = { workspace = true }
database = { workspace = true, features = ["borsh"] }
sql-engine = { workspace = true, features = ["borsh"] }
borsh = { version = "1", features = ["derive"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
sync-client = { workspace = true }
