[package]
name = "sync"
version = "0.1.0"
edition = "2021"

[dependencies]
sql-engine = { workspace = true, features = ["borsh"] }
database = { workspace = true, features = ["borsh"] }
borsh = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde", "sql-engine/serde"]
