[package]
name = "invoice-demo-server"
version = "0.1.0"
edition = "2021"

[dependencies]
sync = { path = "../../../crates/sync" }
sync-server-mysql = { path = "../../../crates/sync-server-mysql" }
invoice-demo-features = { path = "../features", features = ["server"] }
tables = { path = "../../../crates/tables" }
tables-storage = { path = "../../../crates/tables-storage" }
sql-engine = { path = "../../../crates/sql-engine", features = ["borsh"] }
borsh = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio"] }
sea-orm = { version = "=2.0.0-rc.38", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"], default-features = false }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
