[package]
name = "invoice-demo-server"
version = "0.1.0"
edition = "2021"

[dependencies]
sync = { workspace = true }
sync-server-mysql = { workspace = true }
invoice-demo-features = { path = "../features", features = ["server"] }
tables = { workspace = true }
tables-storage = { workspace = true }
sql-engine = { workspace = true, features = ["borsh"] }
borsh = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio"] }
sea-orm = { version = "=2.0.0-rc.38", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"], default-features = false }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
