[package]
name = "invoice-demo-tables-client-generated"
version = "0.1.0"
edition = "2021"

# Client-side facade for invoice-demo tables. All row structs, fetcher
# markers, call wrappers, and wasm_bindgen entry points are generated
# by `tables-codegen` in `build.rs` from the sibling `tables-storage`
# crate's `#[row]` / `#[query]` declarations.

[dependencies]
tables = { path = "../../../crates/tables" }
tables-client = { path = "../../../crates/tables-client" }
sql-engine = { path = "../../../crates/sql-engine" }
sql-parser = { path = "../../../crates/sql-parser" }
borsh = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[build-dependencies]
tables-codegen = { path = "../../../crates/tables-codegen" }
