[package]
name = "invoice-demo-tables-client"
version = "0.1.0"
edition = "2021"

# Client-side facade for invoice-demo tables. Owns the `Table` markers,
# param/row types, the generic `fetch<T>` wrapper, and the per-table
# wasm-bindgen entry points.

[dependencies]
tables = { path = "../../../crates/tables" }
tables-client = { path = "../../../crates/tables-client" }
borsh = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
