[package]
name = "invoice-demo-tables-client"
version = "0.1.0"
edition = "2021"

# Client-side facade for invoice-demo tables. Owns the `Table` markers,
# param/row types, the generic `fetch<T>` wrapper, and the per-table
# wasm-bindgen entry points.

[dependencies]
tables = { path = "../../../crates/tables" }
tables-client = { path = "../../../crates/tables-client" }
borsh = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
# Required by the `tables_client::wasm_fetch!` macro — its `#[wasm_bindgen]`
# attribute expansion emits direct `::wasm_bindgen` / `::wasm_bindgen_futures`
# paths (these can't be routed through tables_client's re-exports).
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
