[package]
name = "invoice-demo-tables-storage"
version = "0.1.0"
edition = "2021"

# Storage-side facade for invoice-demo tables. Native only. Owns the
# `StorageTable` impls, `AppCtx`, and `register_all`.

[dependencies]
invoice-demo-tables-client = { path = "../tables-client" }
tables = { path = "../../../crates/tables" }
tables-storage = { path = "../../../crates/tables-storage" }
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio"] }
