[package]
name = "invoice-demo-tables-storage"
version = "0.1.0"
edition = "2021"

# Storage-side facade for invoice-demo tables. Native only. Owns
# `AppCtx` and `register_all` (closure-based registrations).

[dependencies]
tables = { path = "../../../crates/tables" }
tables-storage = { path = "../../../crates/tables-storage" }
sql-engine = { path = "../../../crates/sql-engine", features = ["borsh", "serde"] }
sql-parser = { path = "../../../crates/sql-parser" }
borsh = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio"] }

[build-dependencies]
tables-codegen = { path = "../../../crates/tables-codegen" }
