[package]
name = "invoice-demo-tables"
version = "0.1.0"
edition = "2021"

# Shared app-level crate for invoice-demo tables. Holds the marker
# types, `Table` impls, and — when the `storage` feature is enabled —
# the `StorageTable` impls plus their sqlx queries.
#
# Two build modes:
#   - wasm client:  default features; no sqlx, client-safe.
#   - native server: `storage` feature on; pulls sqlx and compiles the
#                    fetch bodies against MySQL/TiDB.
#
# Activated downstream by `invoice-demo-tables-storage`.

[features]
default = []
storage = ["dep:sqlx"]

[dependencies]
tables = { path = "../../../crates/tables" }
tables-storage = { path = "../../../crates/tables-storage" }
borsh = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio"], optional = true }
