[package]
name = "invoice-demo-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# Surface is intentionally minimal: the heavy lifting (state, streams,
# requirements, query/exec wasm-bindgen exports, debug toolbar) lives
# in `sync-client::wasm`. The macro `define_wasm_api!` expands here and
# only references `wasm_bindgen`, `js_sys`, `database`, and `sync_client`.
[dependencies]
sync-client = { workspace = true }
database = { workspace = true, features = ["borsh", "serde"] }
invoice-demo-features = { path = "../features" }
invoice-demo-tables-client-generated = { path = "../tables-client-generated" }
wasm-bindgen = "0.2"
js-sys = "0.3"
